--- a/.gitignore
+++ b/.gitignore
@@ -140,4 +140,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# Custom
+*.iml
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,intellij
